--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -140,6 +140,7 @@
     <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_saved_for_offline" context="title of the screen that shows the files saved for offline in the device">Saved for Offline</string>
 	<string name="section_shared_with_me" context="title of the screen that shows all the folders that the user shares with other users and viceversa">Shared with me</string>
+	<string name="section_shared_items" context="title of the screen that shows all the shared items">Shared items</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Rubbish Bin</string>
 	<string name="section_contacts" context="Title of the contact list">Contacts</string>
 	<string name="tab_contacts" context="Title of the contact tab. Capital letters">CONTACTS</string>
