--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name" context="Not translate">MEGA (beta)</string>
-    <string name="app_version" context="Not translate">2.00CR</string>
+    <string name="app_version" context="Not translate">2.0</string>
     
     <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA reprezintă stocare în cloud cu o confideţialitate puternică mereu în funcţiune. 50GB gratuit</string>
@@ -47,7 +47,7 @@
     <string name="action_settings" context="Menu item">Setări</string>
     <string name="action_search" context="Search button">Caută</string>
     <string name="action_refresh" context="Menu item">Reîmprospătează</string>
-    <string name="action_sort_by" context="Menu item">[$2203]</string>
+    <string name="action_sort_by" context="Menu item">Sort by</string>
     <string name="action_help" context="Menu item">Ajutor</string>
     <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgradează contul</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">Selectează toate</string>
