--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
     <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Bandwidth</string>
     <string name="general_error_word" context="It will be followed by the error message">Error</string> 
+    <string name="general_error_file_not_found" context="Message shown when a file doesn't exist">File link not found</string>
+    <string name="general_error_folder_not_found" context="Message shown when a folder doesn't exist">Folder link not found</string>
     <string name="general_not_yet_implemented" context="when clicking into a menu whose functionality is not yet implemented">Not yet implemented</string>
     <string name="general_already_downloaded" context="when trying to download a file that is already downloaded in the device">Already downloaded</string>
     <string name="general_file_info" context="Label of the option menu. When clicking this button, the app shows the info of the file">File info</string>
