--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -307,6 +307,7 @@
     <string name="my_account_used_space" context="Headline for the amount of storage space is used">Used Space</string>
     <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Upgrade now!</string>
     <string name="my_account_change_password" context="menu item">Change password</string>
+    <string name="warning_out_space" context="Warning in Cloud Drive when the user is runningut of space">You\'re running out of space!\n Do you want to upgrade your account?</string>
     
     <string name="my_account_last_session" context="when did the last session happen">Last session:</string>
     <string name="my_account_connections" context="header for the social connections, showing the number of contacts the user has">Connections:</string>
