--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="general_error_folder_not_found" context="Message shown when a folder doesn't exist">Folder link not found</string>
     <string name="general_not_yet_implemented" context="when clicking into a menu whose functionality is not yet implemented">Not yet implemented</string>
     <string name="general_already_downloaded" context="when trying to download a file that is already downloaded in the device">Already downloaded</string>
+    <string name="general_already_uploaded" context="when trying to upload a file that is already uploaded in the folder">already uploaded</string>
     <string name="general_file_info" context="Label of the option menu. When clicking this button, the app shows the info of the file">File info</string>
     <string name="general_folder_info" context="Label of the option menu. When clicking this button, the app shows the info of the folder">Folder info</string>
     <string name="general_menu" context="Title when the left menu is opened">Menu</string>
